--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
       box-shadow: 0 8px 30px rgba(111,163,255,0.4);
     }
 
-    /* Position the items */
-    .jacket { left: 8%; top: 22%; background-image: url('images/usaf-pt-jacket.png'); }
-    .wings  { left: 30%; top: 12%; background-image: url('images/us-flag.png'); }
-    .badge  { left: 55%; top: 25%; background-image: url('images/usaf-patch.png'); }
-    .photo  { left: 75%; top: 15%; background-image: url('images/usaf-abu-top.png'); }
-    .patch  { left: 25%; bottom: 12%; background-image: url('images/usaf-boot.png'); }
-    .tags   { left: 60%; bottom: 8%; background-image: url('images/usaf-pt-shorts.png'); }
+    /* Position the items (uses your folder name!) */
+    .jacket { left: 8%; top: 22%; background-image: url('untitled folder/usaf-pt-jacket.png'); }
+    .wings  { left: 30%; top: 12%; background-image: url('untitled folder/us-flag.png'); }
+    .badge  { left: 55%; top: 25%; background-image: url('untitled folder/usaf-patch.png'); }
+    .photo  { left: 75%; top: 15%; background-image: url('untitled folder/usaf-abu-top.png'); }
+    .patch  { left: 25%; bottom: 12%; background-image: url('untitled folder/usaf-boot.png'); }
+    .tags   { left: 60%; bottom: 8%; background-image: url('untitled folder/usaf-pt-shorts.png'); }
 
     /* Modal pop-ups */
     .modal[hidden] { display: none; }
